Closed Bug 515829 Opened 15 years ago Closed 15 years ago

"ASSERTION: How can we have a null mDefaultSubmitElement but a first-submit slot in one of the lists?", crash [@ CompareFormControlPosition]

Categories

(Core :: Layout: Form Controls, defect)

x86
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: bzbarsky)

References

Details

(Keywords: assertion, crash, testcase)

Crash Data

Attachments

(2 files)

###!!! ASSERTION: How can we have a null mDefaultSubmitElement but a first-submit slot in one of the lists?: '*firstSubmitSlot == mDefaultSubmitElement || mDefaultSubmitElement', file /Users/jruderman/central/content/html/content/src/nsHTMLFormElement.cpp, line 1438 ###!!! ASSERTION: We should be able to QI to nsIContent here!: 'content1 && content2', file /Users/jruderman/central/content/html/content/src/nsHTMLFormElement.cpp, line 1298 ###!!! ASSERTION: You can't dereference a NULL nsCOMPtr with operator->().: 'mRawPtr != 0', file ../../dist/include/nsCOMPtr.h, line 796
Summary: "ASSERTION: How can we have a null mDefaultSubmitElement but a first-submit slot in one of the lists?" → "ASSERTION: How can we have a null mDefaultSubmitElement but a first-submit slot in one of the lists?", crash [@ CompareFormControlPosition]
Works for me, using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.3a1pre) Gecko/20090910 Minefield/3.7a1pre (.NET CLR 3.5.30729)
Regression from bug 513153.
Blocks: 513153
Oh, and this is only hit if the default submit is removed and then added as part of the same update.
Attached patch FixSplinter Review
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #399946 - Flags: review?(jst)
Attachment #399946 - Flags: superreview+
Attachment #399946 - Flags: review?(jst)
Attachment #399946 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Crash Signature: [@ CompareFormControlPosition]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: