Bug 515829.  Don't assume that mDefaultSubmitElement is non-null just because our firstSubmitSlot contains non-null.  r=jst